--- a/app/src/main/res/layout/publicity_recommend_view.xml
+++ b/app/src/main/res/layout/publicity_recommend_view.xml
@@ -6,38 +6,178 @@
     android:layout_height="wrap_content"
     tools:ignore="SpUsage, ContentDescription">
 
-    <View
-        android:id="@+id/shadow"
-        android:layout_width="match_parent"
-        android:layout_height="70dp"
-        android:layout_gravity="bottom"
-        android:layout_marginHorizontal="@dimen/margin_13"
-        android:layout_marginVertical="@dimen/margin_7"
-        android:background="@drawable/bg_gradient_bottom_shadow"
-        app:layout_constraintBottom_toBottomOf="parent" />
-
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="@dimen/margin_14"
         android:layout_marginVertical="@dimen/margin_10"
+        app:cardCornerRadius="@dimen/margin_4"
+        app:cardElevation="@dimen/margin_3"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <ImageView
-            android:id="@+id/cl_sports_background"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/cl_game_info"
             android:layout_width="match_parent"
-            android:layout_height="156dp"
-            android:layout_marginTop="@dimen/margin_4"
-            android:background="@drawable/bg_board_game_soccer"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <ImageView
+                android:id="@+id/cl_sports_background"
+                android:layout_width="match_parent"
+                android:layout_height="156dp"
+                android:background="@drawable/bg_board_game_soccer"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                app:layout_constraintBottom_toTopOf="@+id/cl_game"
+                app:layout_constraintTop_toTopOf="parent">
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:gravity="center_horizontal|bottom"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:id="@+id/iv_home_icon"
+                        android:layout_width="55dp"
+                        android:layout_height="55dp"
+                        android:adjustViewBounds="true" />
+
+                    <TextView
+                        android:id="@+id/tv_home_name"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginHorizontal="@dimen/margin_10"
+                        android:layout_marginBottom="@dimen/margin_8"
+                        android:ellipsize="end"
+                        android:gravity="center"
+                        android:maxLines="1"
+                        android:textColor="@color/color_FFFFFF_FFFFFF"
+                        android:textSize="@dimen/textSize12sp"
+                        tools:text="Atleticon Nacional" />
+                </LinearLayout>
+
+                <View
+                    android:layout_width="30dp"
+                    android:layout_height="match_parent" />
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:gravity="center_horizontal|bottom"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:id="@+id/iv_away_icon"
+                        android:layout_width="55dp"
+                        android:layout_height="55dp"
+                        android:adjustViewBounds="true" />
+
+                    <TextView
+                        android:id="@+id/tv_away_name"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginHorizontal="@dimen/margin_10"
+                        android:layout_marginBottom="@dimen/margin_8"
+                        android:ellipsize="end"
+                        android:gravity="center"
+                        android:maxLines="1"
+                        android:textColor="@color/color_FFFFFF_FFFFFF"
+                        android:textSize="@dimen/textSize12sp"
+                        tools:text="Junior Barranquilla" />
+                </LinearLayout>
+            </LinearLayout>
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/cl_game"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="86dp"
+                app:layout_constraintTop_toTopOf="parent">
+
+                <TextView
+                    android:id="@+id/tv_game_play_cate_code_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/margin_13"
+                    android:layout_marginTop="@dimen/margin_1"
+                    android:textColor="@color/color_317FFF_0760D4"
+                    android:textSize="@dimen/textSize12sp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    tools:text="1 X 2" />
+
+                <TextView
+                    android:id="@+id/tv_game_play_time"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/margin_13"
+                    android:layout_marginTop="@dimen/margin_1"
+                    android:layout_marginEnd="@dimen/margin_11"
+                    android:drawableStart="@drawable/ic_icon_clock"
+                    android:drawablePadding="4dp"
+                    android:textColor="@color/color_BCBCBC_666666"
+                    android:textSize="@dimen/textSize12sp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    tools:text="2ND 09:15" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:gravity="center_vertical"
+                android:orientation="horizontal"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/cl_game">
+
+                <org.cxct.sportlottery.ui.game.widget.OddsButtonPublicity
+                    android:id="@+id/odd_btn_home"
+                    android:layout_width="0dp"
+                    android:layout_height="30dp"
+                    android:layout_margin="8dp"
+                    android:layout_weight="1" />
+
+                <org.cxct.sportlottery.ui.game.widget.OddsButtonPublicity
+                    android:id="@+id/odd_btn_draw"
+                    android:layout_width="0dp"
+                    android:layout_height="30dp"
+                    android:layout_margin="8dp"
+                    android:layout_weight="1" />
+
+                <org.cxct.sportlottery.ui.game.widget.OddsButtonPublicity
+                    android:id="@+id/odd_btn_away"
+                    android:layout_width="0dp"
+                    android:layout_height="30dp"
+                    android:layout_margin="8dp"
+                    android:layout_weight="1" />
+
+            </LinearLayout>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:elevation="@dimen/margin_4"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
             android:id="@+id/iv_vs_bar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="6dp"
             android:background="@drawable/img_vs_bar"
-            android:scaleType="centerCrop"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -87,140 +227,6 @@
                 android:textSize="@dimen/textSize12sp"
                 tools:text="18" />
         </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_marginTop="@dimen/margin_4"
-            app:layout_constraintBottom_toTopOf="@+id/cl_game"
-            app:layout_constraintTop_toTopOf="parent">
-
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:gravity="center_horizontal|bottom"
-                android:orientation="vertical">
-
-                <ImageView
-                    android:id="@+id/iv_home_icon"
-                    android:layout_width="55dp"
-                    android:layout_height="55dp"
-                    android:adjustViewBounds="true" />
-
-                <TextView
-                    android:id="@+id/tv_home_name"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="@dimen/margin_10"
-                    android:layout_marginBottom="@dimen/margin_8"
-                    android:ellipsize="end"
-                    android:gravity="center"
-                    android:maxLines="1"
-                    android:textColor="@color/color_FFFFFF_FFFFFF"
-                    android:textSize="@dimen/textSize12sp"
-                    tools:text="Atleticon Nacional" />
-            </LinearLayout>
-
-            <View
-                android:layout_width="30dp"
-                android:layout_height="match_parent" />
-
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:gravity="center_horizontal|bottom"
-                android:orientation="vertical">
-
-                <ImageView
-                    android:id="@+id/iv_away_icon"
-                    android:layout_width="55dp"
-                    android:layout_height="55dp"
-                    android:adjustViewBounds="true" />
-
-                <TextView
-                    android:id="@+id/tv_away_name"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="@dimen/margin_10"
-                    android:layout_marginBottom="@dimen/margin_8"
-                    android:ellipsize="end"
-                    android:gravity="center"
-                    android:maxLines="1"
-                    android:textColor="@color/color_FFFFFF_FFFFFF"
-                    android:textSize="@dimen/textSize12sp"
-                    tools:text="Junior Barranquilla" />
-            </LinearLayout>
-        </LinearLayout>
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/cl_game"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="90dp"
-            app:layout_constraintTop_toTopOf="parent">
-
-            <TextView
-                android:id="@+id/tv_game_play_cate_code_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/margin_13"
-                android:layout_marginTop="@dimen/margin_1"
-                android:textColor="@color/color_317FFF_0760D4"
-                android:textSize="@dimen/textSize12sp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:text="1 X 2" />
-
-            <TextView
-                android:id="@+id/tv_game_play_time"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/margin_13"
-                android:layout_marginTop="@dimen/margin_1"
-                android:layout_marginEnd="@dimen/margin_11"
-                android:drawableStart="@drawable/ic_icon_clock"
-                android:drawablePadding="4dp"
-                android:textColor="@color/color_BCBCBC_666666"
-                android:textSize="@dimen/textSize12sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:text="2ND 09:15" />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:gravity="center_vertical"
-            android:orientation="horizontal"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/cl_game">
-
-            <org.cxct.sportlottery.ui.game.widget.OddsButtonPublicity
-                android:id="@+id/odd_btn_home"
-                android:layout_width="0dp"
-                android:layout_height="30dp"
-                android:layout_margin="8dp"
-                android:layout_weight="1" />
-
-            <org.cxct.sportlottery.ui.game.widget.OddsButtonPublicity
-                android:id="@+id/odd_btn_draw"
-                android:layout_width="0dp"
-                android:layout_height="30dp"
-                android:layout_margin="8dp"
-                android:layout_weight="1" />
-
-            <org.cxct.sportlottery.ui.game.widget.OddsButtonPublicity
-                android:id="@+id/odd_btn_away"
-                android:layout_width="0dp"
-                android:layout_height="30dp"
-                android:layout_margin="8dp"
-                android:layout_weight="1" />
-
-        </LinearLayout>
-
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
