--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -83,6 +83,7 @@
     <color name="color_3d3d3d_dddddd">@color/color_3d3d3d</color>
     <color name="color_cccccc_333333">@color/color_cccccc</color>
     <color name="color_212121_ffffff">@color/color_212121</color>
+    <color name="color_b4b4b4_848b9f">@color/color_b4b4b4</color>
 
 
     <color name="color_FFFFFF_DE000000">@color/color_FFFFFF</color>
