--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -99,6 +99,7 @@
     <color name="color_232426">#232426</color>
     <color name="color_f7f8fa">#f7f8fa</color>
     <color name="color_3d3d3d">#3d3d3d</color>
+    <color name="color_848B9F">#848B9F</color>
     <!--以下部分，是系统中的白天的色值 -->
     <!--命名規則，color_[夜間色碼]_[白天色碼] -->
 
@@ -181,6 +182,7 @@
     <color name="color_3d3d3d_dddddd">@color/color_dddddd</color>
     <color name="color_cccccc_333333">@color/color_333333</color>
     <color name="color_212121_ffffff">@color/color_FFFFFF</color>
+    <color name="color_b4b4b4_848b9f">@color/color_848B9F</color>
 
 
     <color name="color_FFFFFF_DE000000">@color/color_DE000000</color>
