[Update] 1. 更新 E-Games 圖檔  2. 不顯示隊名  3. 加上1, X, 2

--- a/app/src/main/res/layout/publicity_recommend_view.xml
+++ b/app/src/main/res/layout/publicity_recommend_view.xml
@@ -174,21 +174,21 @@
                 app:layout_constraintTop_toBottomOf="@+id/cl_game">
 
                 <org.cxct.sportlottery.ui.game.widget.OddsButtonPublicity
-                    android:id="@+id/odd_btn_home"
+                    android:id="@+id/odd_btn_1"
                     android:layout_width="0dp"
                     android:layout_height="30dp"
                     android:layout_marginHorizontal="@dimen/margin_6"
                     android:layout_weight="1" />
 
                 <org.cxct.sportlottery.ui.game.widget.OddsButtonPublicity
-                    android:id="@+id/odd_btn_draw"
+                    android:id="@+id/odd_btn_2"
                     android:layout_width="0dp"
                     android:layout_height="30dp"
                     android:layout_marginHorizontal="@dimen/margin_6"
                     android:layout_weight="1" />
 
                 <org.cxct.sportlottery.ui.game.widget.OddsButtonPublicity
-                    android:id="@+id/odd_btn_away"
+                    android:id="@+id/odd_btn_3"
                     android:layout_width="0dp"
                     android:layout_height="30dp"
                     android:layout_marginHorizontal="@dimen/margin_6"
