--- a/app/src/main/res/layout/publicity_e_games_view.xml
+++ b/app/src/main/res/layout/publicity_e_games_view.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/ivTitle"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -21,13 +22,20 @@
         android:textSize="@dimen/textSize14sp"
         android:textStyle="bold" />
 
-    <ImageView
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="-3dp"
-        android:layout_marginTop="-8dp"
-        android:layout_marginEnd="-3dp"
-        android:background="@drawable/ic_e_games" />
+        android:layout_marginHorizontal="@dimen/margin_14"
+        android:layout_marginVertical="@dimen/margin_10"
+        app:cardCornerRadius="@dimen/margin_4"
+        app:cardElevation="@dimen/margin_3">
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/ic_e_games" />
+
+    </androidx.cardview.widget.CardView>
 
     <View
         android:id="@+id/betListBarPaddingView"
