--- a/app/src/main/res/layout/publicity_user_info_view.xml
+++ b/app/src/main/res/layout/publicity_user_info_view.xml
@@ -17,7 +17,6 @@
         android:layout_width="1dp"
         android:layout_height="24dp"
         android:layout_marginVertical="18dp"
-        android:background="@color/color_3d3d3d_dddddd"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -25,12 +24,11 @@
 
     <LinearLayout
         android:id="@+id/ll_login_signup"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:gravity="center_vertical"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/line"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:visibility="visible">
@@ -44,21 +42,31 @@
             android:textColor="@color/color_cccccc_333333"
             android:textSize="@dimen/textSize14sp" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="@dimen/margin_5"
-            android:text="@string/splash_no_trans"
-            android:textColor="@color/color_cccccc_333333"
-            android:textSize="@dimen/textSize14sp" />
+        <LinearLayout
+            android:id="@+id/ll_signup"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center_vertical"
+            tools:visibility="visible">
 
-        <TextView
-            android:id="@+id/btn_register"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/btn_register"
-            android:textColor="@color/color_cccccc_333333"
-            android:textSize="@dimen/textSize14sp" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="@dimen/margin_5"
+                android:text="@string/splash_no_trans"
+                android:textColor="@color/color_cccccc_333333"
+                android:textSize="@dimen/textSize14sp" />
+
+            <TextView
+                android:id="@+id/btn_register"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/btn_register"
+                android:textColor="@color/color_cccccc_333333"
+                android:textSize="@dimen/textSize14sp" />
+
+        </LinearLayout>
     </LinearLayout>
 
     <LinearLayout
@@ -92,7 +100,20 @@
             tools:text="₱ 100,000,000.000" />
     </LinearLayout>
 
+    <View
+        android:id="@+id/line_center"
+        android:layout_width="1dp"
+        android:layout_height="24dp"
+        android:layout_marginVertical="18dp"
+        android:background="@color/color_3d3d3d_dddddd"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:visibility="visible" />
+
     <LinearLayout
+        android:id="@+id/ll_deposit_withdraw"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:gravity="center_vertical"
@@ -101,7 +122,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/line"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        tools:visibility="visible">
 
         <TextView
             android:id="@+id/btn_deposit"
