[Modify] 如果熱門推薦賽事為0，隱藏熱門推薦相關item

--- a/app/src/main/res/layout/publicity_announcement_view.xml
+++ b/app/src/main/res/layout/publicity_announcement_view.xml
@@ -6,6 +6,7 @@
     android:layout_height="wrap_content"
     android:paddingStart="23dp"
     android:paddingEnd="25dp"
+    android:paddingVertical="@dimen/margin_3"
     android:background="@color/color_191919_FCFCFC">
 
     <ImageView
