--- a/app/src/main/res/layout/publicity_e_games_view.xml
+++ b/app/src/main/res/layout/publicity_e_games_view.xml
@@ -5,7 +5,7 @@
     android:id="@+id/ivTitle"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="6dp"
+    android:layout_marginTop="@dimen/margin_9"
     android:gravity="center_vertical"
     android:orientation="vertical"
     tools:ignore="SpUsage, ContentDescription">
