--- a/app/src/main/res/layout/publicity_title_view.xml
+++ b/app/src/main/res/layout/publicity_title_view.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingVertical="@dimen/margin_10"
+    android:paddingTop="@dimen/margin_10"
+    android:paddingBottom="@dimen/margin_7"
     android:orientation="vertical"
     tools:ignore="UseCompoundDrawables, SpUsage">
 
