[Fix] 26125 【夜间模式 - Android】复选框不适合夜间模式

--- a/app/src/main/res/drawable/ic_check_box_statement_agree_check.xml
+++ b/app/src/main/res/drawable/ic_check_box_statement_agree_check.xml
@@ -12,7 +12,7 @@
             android:translateX="40.000000"
             android:translateY="395.000000">
             <path
-                android:fillColor="#FAFAFA"
+                android:fillColor="@color/transparent"
                 android:fillType="evenOdd"
                 android:strokeColor="#D2D2D7"
                 android:strokeWidth="1"
