--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -16,6 +16,7 @@
     <color name="color_0760D4_0760D4">@color/color_0760D4</color>
     <color name="color_171E26_9CC7FF">@color/color_171E26</color>
     <color name="color_232426_E7F1FF">@color/color_232426</color>
+    <color name="color_77A0CC_405366">@color/color_77A0CC</color>
 
     <color name="color_FF9E3C_FF9E3C">@color/color_FF9E3C</color>
     <color name="color_FF9143_ff9200">@color/color_FF9143</color>
