--- a/app/src/main/res/layout/fragment_red_envelope_receive.xml
+++ b/app/src/main/res/layout/fragment_red_envelope_receive.xml
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+
     <RelativeLayout
         android:id="@+id/relative_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context="com.myapplicationtransparrent.MainActivity">
+        android:layout_height="match_parent">
 
     </RelativeLayout>
 
