--- a/app/src/main/res/layout/item_bet_list_batch_control_connect_v3.xml
+++ b/app/src/main/res/layout/item_bet_list_batch_control_connect_v3.xml
@@ -95,7 +95,7 @@
                     android:textColor="@color/color_BBBBBB_333333"
                     android:textColorHint="@color/color_404040_cccccc"
                     android:textSize="@dimen/textSize16sp"
-                    app:layout_constraintBottom_toTopOf="@+id/ll_parlay_tips"
+                    app:layout_constraintBottom_toTopOf="@+id/tvErrorMessage"
                     app:layout_constraintEnd_toStartOf="@+id/tv_symbol_count"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/tv_parlay_type" />
@@ -136,46 +136,28 @@
                     app:layout_constraintTop_toTopOf="@+id/et_bet_parlay"
                     tools:text="26" />
 
-                <LinearLayout
-                    android:id="@+id/ll_parlay_tips"
-                    android:layout_width="match_parent"
+                <TextView
+                    android:id="@+id/tvErrorMessage"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    app:layout_constraintBottom_toTopOf="@id/layoutKeyBoard"
-                    app:layout_constraintTop_toBottomOf="@+id/et_bet_parlay">
-
-                    <TextView
-                        android:id="@+id/tvBalanceInsufficientMessageParlay"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginHorizontal="@dimen/margin_24"
-                        android:paddingTop="@dimen/margin_6"
-                        android:text="@string/bet_info_bet_balance_insufficient"
-                        android:textColor="@color/color_E44438_e44438"
-                        android:textSize="@dimen/textSize13sp"
-                        android:visibility="gone"
-                        tools:visibility="visible" />
-
-                    <TextView
-                        android:id="@+id/tvErrorMessageParlay"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginHorizontal="@dimen/margin_24"
-                        android:paddingTop="@dimen/margin_6"
-                        android:textColor="@color/color_E44438_e44438"
-                        android:textSize="@dimen/textSize13sp"
-                        android:visibility="gone"
-                        android:text="@string/bet_info_list_minimum_limit_amount"
-                        tools:visibility="visible" />
-                </LinearLayout>
+                    android:layout_marginStart="24dp"
+                    android:paddingTop="6dp"
+                    android:textColor="@color/color_E44438_e44438"
+                    android:textSize="@dimen/textSize13sp"
+                    android:visibility="gone"
+                    app:layout_constraintBottom_toTopOf="@+id/layoutKeyBoard"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/et_bet_parlay"
+                    tools:text="@string/bet_info_list_minimum_limit_amount"
+                    tools:visibility="visible" />
 
                 <org.cxct.sportlottery.util.KeyboardView
                     android:id="@+id/layoutKeyBoard"
                     android:layout_width="match_parent"
                     android:layout_height="120dp"
-                    android:layout_marginHorizontal="@dimen/margin_24"
-                    android:paddingTop="@dimen/margin_10"
-                    android:paddingBottom="@dimen/margin_8"
+                    android:layout_marginHorizontal="24dp"
+                    android:paddingTop="10dp"
+                    android:layout_marginBottom="8dp"
                     android:visibility="gone"
                     app:layout_constraintBottom_toBottomOf="parent"
                     tools:visibility="visible" />
