--- a/app/src/main/res/layout/content_bet_info_item_v3.xml
+++ b/app/src/main/res/layout/content_bet_info_item_v3.xml
@@ -226,12 +226,30 @@
                         android:id="@+id/layoutKeyBoard"
                         android:layout_width="match_parent"
                         android:layout_height="120dp"
-                        android:layout_marginHorizontal="@dimen/margin_24"
-                        android:paddingTop="@dimen/margin_10"
-                        android:paddingBottom="@dimen/margin_8"
+                        android:layout_marginHorizontal="24dp"
+                        android:paddingTop="10dp"
                         android:visibility="gone"
-                        app:layout_constraintBottom_toTopOf="@+id/bottomPaddingView"
+                        app:layout_constraintBottom_toTopOf="@+id/ll_balance_tips"
                         tools:visibility="visible" />
+
+                    <LinearLayout
+                        android:id="@+id/ll_balance_tips"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        app:layout_constraintBottom_toTopOf="@id/bottomPaddingView">
+
+                        <TextView
+                            android:id="@+id/tvBalanceInsufficientMessage"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginHorizontal="@dimen/margin_24"
+                            android:paddingTop="@dimen/margin_6"
+                            android:text="@string/bet_info_bet_balance_insufficient"
+                            android:textColor="@color/color_E44438_e44438"
+                            android:textSize="@dimen/textSize13sp"
+                            android:visibility="gone"
+                            tools:visibility="visible" />
+                    </LinearLayout>
 
                     <View
                         android:id="@+id/bottomPaddingView"
@@ -271,23 +289,11 @@
                         app:layout_constraintBottom_toTopOf="@id/layoutKeyBoard">
 
                         <TextView
-                            android:id="@+id/tvBalanceInsufficientMessage"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginHorizontal="@dimen/margin_24"
-                            android:paddingTop="@dimen/margin_6"
-                            android:text="@string/bet_info_bet_balance_insufficient"
-                            android:textColor="@color/color_E44438_e44438"
-                            android:textSize="@dimen/textSize13sp"
-                            android:visibility="gone"
-                            tools:visibility="visible" />
-
-                        <TextView
                             android:id="@+id/tvErrorMessage"
-                            android:layout_width="match_parent"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginHorizontal="@dimen/margin_24"
-                            android:paddingTop="@dimen/margin_6"
+                            android:layout_marginHorizontal="24dp"
+                            android:paddingTop="6dp"
                             android:text="@string/bet_info_list_minimum_limit_amount"
                             android:textColor="@color/color_E44438_e44438"
                             android:textSize="@dimen/textSize13sp"
