--- a/app/src/main/res/layout/publicity_recommend_view.xml
+++ b/app/src/main/res/layout/publicity_recommend_view.xml
@@ -204,7 +204,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:elevation="3dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="@dimen/margin_6"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -271,7 +271,7 @@
         android:id="@+id/clNoVsBar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="@dimen/margin_6"
         android:elevation="3dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
