--- a/app/src/main/res/layout/component_date_range_selector.xml
+++ b/app/src/main/res/layout/component_date_range_selector.xml
@@ -114,6 +114,7 @@
         android:textColor="@color/color_FFFFFF_FFFFFF"
         android:gravity="center"
         android:textSize="@dimen/textSize14sp"
+        android:textAllCaps="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/ll_end_date"
         app:layout_constraintTop_toTopOf="parent"
