--- a/app/src/main/res/layout/button_odd_detail_publicity.xml
+++ b/app/src/main/res/layout/button_odd_detail_publicity.xml
@@ -7,7 +7,6 @@
     android:background="@drawable/selector_button_radius_4_odds_publicity"
     tools:ignore="SpUsage,ContentDescription">
 
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -31,7 +30,7 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:maxLines="1"
-                android:layout_marginEnd="2dp"
+                android:paddingHorizontal="2dp"
                 android:textColor="@color/selector_button_odd_top_text_publicity"
                 android:textSize="@dimen/textSize14sp"
                 tools:text="1"
@@ -44,6 +43,7 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:maxLines="1"
+                android:paddingHorizontal="2dp"
                 android:textColor="@color/selector_button_odd_top_text"
                 android:textSize="@dimen/textSize14sp"
                 tools:text="-0/0.5"
@@ -53,11 +53,11 @@
                 android:id="@+id/tv_odds"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="2dp"
                 android:layout_weight="1"
                 android:gravity="center"
+                android:paddingHorizontal="2dp"
                 android:textColor="@color/selector_button_odd_bottom_text_publicity"
-                android:textSize="@dimen/textSize15sp"
+                android:textSize="@dimen/textSize14sp"
                 android:textStyle="bold"
                 tools:text="1.067" />
 
