--- a/app/src/main/res/layout/publicity_recommend_view.xml
+++ b/app/src/main/res/layout/publicity_recommend_view.xml
@@ -45,10 +45,11 @@
 
                     <ImageView
                         android:id="@+id/iv_home_icon"
-                        android:layout_width="wrap_content"
+                        android:layout_width="43dp"
                         android:layout_height="43dp"
                         android:layout_marginBottom="@dimen/margin_2"
-                        android:adjustViewBounds="true" />
+                        android:scaleType="centerInside"
+                        tools:src="@drawable/bg_recommend_game_default" />
 
                     <TextView
                         android:id="@+id/tv_home_name"
@@ -76,10 +77,11 @@
 
                     <ImageView
                         android:id="@+id/iv_away_icon"
-                        android:layout_width="wrap_content"
+                        android:layout_width="43dp"
                         android:layout_height="43dp"
                         android:layout_marginBottom="@dimen/margin_2"
-                        android:adjustViewBounds="true" />
+                        android:scaleType="centerInside"
+                        tools:src="@drawable/bg_recommend_game_default" />
 
                     <TextView
                         android:id="@+id/tv_away_name"
