--- a/app/src/main/res/layout/dialog_redenvelope_fail.xml
+++ b/app/src/main/res/layout/dialog_redenvelope_fail.xml
@@ -1,46 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
     android:layout_gravity="center"
-    android:gravity="center_horizontal">
-<FrameLayout
-    android:layout_width="280dp"
-    android:layout_height="wrap_content"
-    >
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:adjustViewBounds="true"
-        android:src="@drawable/bg_redpocket_fail"/>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="120dp"
-        android:layout_gravity="center_horizontal"
-        android:textColor="#8A8681"
-        android:textSize="@dimen/textSize24sp"
-        android:fontFamily="@font/helvetica_bold"
-        android:textStyle="bold"
-        android:text="@string/redenvelope_fail"/>
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="60dp"
-        android:layout_marginTop="240dp"
-        android:textAlignment="center"
-        android:layout_gravity="center_horizontal"
-        android:textColor="@color/color_1A1A1A_FFFFFF"
-        android:textSize="@dimen/textSize16sp"
-        android:textStyle="bold"
-        android:text="@string/redenvelope_fail_desp"/>
+    android:gravity="center_horizontal"
+    android:orientation="vertical">
 
-</FrameLayout>
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+
+        <ImageView
+            android:id="@+id/iv_shinne"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/shinne" />
+
+        <FrameLayout
+            android:layout_width="280dp"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:adjustViewBounds="true"
+                android:src="@drawable/bg_redpocket_fail" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="120dp"
+                android:fontFamily="@font/helvetica_bold"
+                android:text="@string/redenvelope_fail"
+                android:textColor="#8A8681"
+                android:textSize="@dimen/textSize24sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginHorizontal="60dp"
+                android:layout_marginTop="240dp"
+                android:text="@string/redenvelope_fail_desp"
+                android:textAlignment="center"
+                android:textColor="@color/color_1A1A1A_FFFFFF"
+                android:textSize="@dimen/textSize16sp"
+                android:textStyle="bold" />
+
+        </FrameLayout>
+    </RelativeLayout>
+
     <ImageView
         android:id="@+id/iv_close"
         android:layout_width="@dimen/margin_40"
         android:layout_height="@dimen/margin_40"
-        android:src="@drawable/ic_close_gray_bg"/>
+        android:layout_marginTop="-40dp"
+        android:src="@drawable/ic_close_gray_bg" />
 </LinearLayout>
