--- a/app/src/main/res/layout/dialog_redenvelope_success.xml
+++ b/app/src/main/res/layout/dialog_redenvelope_success.xml
@@ -1,56 +1,79 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:gravity="center_horizontal">
-<FrameLayout
-    android:layout_width="280dp"
-    android:layout_height="wrap_content">
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:adjustViewBounds="true"
-        android:src="@drawable/bg_redpocket_success"/>
-    <TextView
-        android:id="@+id/tv_amount"
+    android:layout_gravity="center"
+    android:gravity="center_horizontal"
+    android:orientation="vertical">
+
+    <RelativeLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/margin_50"
-        android:layout_gravity="center_horizontal"
-        android:textColor="#D88B53"
-        android:textSize="@dimen/textSize26sp"
-        android:fontFamily="@font/helvetica_bold"
-        android:textStyle="bold"
-        android:text="₱ 1,000.000"/>
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="60dp"
-        android:layout_marginTop="210dp"
-        android:textAlignment="center"
-        android:layout_gravity="center_horizontal"
-        android:textColor="@color/color_1A1A1A_FFFFFF"
-        android:textSize="@dimen/textSize16sp"
-        android:textStyle="bold"
-        android:text="@string/red_envelope_congratulations"/>
+        android:layout_height="wrap_content">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="@dimen/margin_42"
-        android:layout_marginBottom="35dp"
-        android:textAlignment="center"
-        android:layout_gravity="center_horizontal|bottom"
-        android:textColor="@color/color_1A1A1A_FFFFFF"
-        android:textSize="@dimen/textSize12sp"
-        android:text="@string/pls_check_amount"/>
 
-</FrameLayout>
+        <ImageView
+            android:id="@+id/iv_shinne"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/shinne" />
+
+        <FrameLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:adjustViewBounds="true"
+                android:src="@drawable/bg_redpocket_success" />
+
+            <TextView
+                android:id="@+id/tv_amount"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="@dimen/margin_50"
+                android:fontFamily="@font/helvetica_bold"
+                android:text="₱ 1,000.000"
+                android:textColor="#D88B53"
+                android:textSize="@dimen/textSize26sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginHorizontal="60dp"
+                android:layout_marginTop="210dp"
+                android:text="@string/red_envelope_congratulations"
+                android:textAlignment="center"
+                android:textColor="@color/color_1A1A1A_FFFFFF"
+                android:textSize="@dimen/textSize16sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal|bottom"
+                android:layout_marginHorizontal="@dimen/margin_42"
+                android:layout_marginBottom="35dp"
+                android:text="@string/pls_check_amount"
+                android:textAlignment="center"
+                android:textColor="@color/color_1A1A1A_FFFFFF"
+                android:textSize="@dimen/textSize12sp" />
+
+        </FrameLayout>
+
+
+    </RelativeLayout>
+
+
     <ImageView
         android:id="@+id/iv_close"
         android:layout_width="@dimen/margin_40"
         android:layout_height="@dimen/margin_40"
-        android:src="@drawable/ic_close_gray_bg"/>
+        android:layout_marginTop="-40dp"
+        android:src="@drawable/ic_close_gray_bg" />
 </LinearLayout>
